[package]
name = "bsv"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "BSV primitives and the validated block-header chain (the single root of trust)."

[dependencies]
thiserror = { workspace = true }
sha2 = { workspace = true }
ripemd = { workspace = true }

[lints]
workspace = true
